...
        ])
        
        /// Set configuration instance to textfield that will collect card number
        cardNumber.configuration = cardConfiguration
        
        /// Setup UI attributes
        cardNumber.attributedPlaceholder = NSAttributedString(string: "4111 1111 1111 1111", attributes: [NSAttributedString.Key.foregroundColor: placeholderColor])
        
        // MARK: - Card Expiration Date Field
        /// Set expiration data field configuration with same collector but specific fieldName
        let expDateConfiguration = VGSConfiguration(collector: collector, fieldName: "card_expirationDate")
        
        /// Set input .isRequired = true if you need textfield input be not empty or nil.  Then user couldn't send expiration date that is empty or nil. VGSCollect.sendData(_:) will return specific VGSError in that case.
...
        expDateConfiguration.keyboardAppearance = .light
        
        cardExpDate.configuration = expDateConfiguration
      
        /// Add keyboard accessory view on top of UIPicker to handle actions
        cardExpDate.keyboardAccessoryView = makeAccessoryView()
        cardExpDate.attributedPlaceholder = NSAttributedString(string: "11/22", attributes: [NSAttributedString.Key.foregroundColor: placeholderColor])
        cardExpDate.textAlignment = .center
        
        // MARK: - Card CVC Field
        /// Set cvc data field configuration with same collector but specific fieldName
        let cvcConfiguration = VGSConfiguration(collector: collector, fieldName: "card_cvc")
        cvcConfiguration.isRequired = true
        cvcConfiguration.type = .cvc
        cvcConfiguration.keyboardAppearance = .dark
        
        cardCVCNumber.configuration = cvcConfiguration
        cardCVCNumber.isSecureTextEntry = true
        cardCVCNumber.attributedPlaceholder = NSAttributedString(string: "CVC", attributes: [NSAttributedString.Key.foregroundColor: placeholderColor])
        cardCVCNumber.textAlignment = .center

        // MARK: - Card Holder Name Field
        /// Set cvc data field configuration with same collector but specific fieldName
        let cardHolderConfiguration = VGSConfiguration(collector: collector, fieldName: "cardholder_name")
        cardHolderConfiguration.type = .cardHolderName
        cardHolderConfiguration.keyboardAppearance = .dark
        
        cardHolderName.configuration = cardHolderConfiguration
        cardHolderName.attributedPlaceholder = NSAttributedString(string: "Cardholder Name", attributes: [NSAttributedString.Key.foregroundColor: placeholderColor])
      
      
        // MARK: - Set Fields UI attributes
        collector.textFields.forEach({
          $0.textColor = .white
          $0.tintColor = .white
...
