...
                                <rect key="frame" x="30" y="594" width="315" height="56"/>
                                <color key="backgroundColor" red="0.38164311649999999" green="0.49087244270000002" blue="0.93729978800000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="56" id="GH7-lq-bPH"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
                                <state key="normal" title="Add payment method">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="8"/>
                                    </userDefinedRuntimeAttribute>
...
                                        <rect key="frame" x="310" y="57" width="45" height="22"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="45" id="9ps-Mt-UkD"/>
                                            <constraint firstAttribute="height" constant="22" id="z7x-1s-flc"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                        <state key="normal" title="Save">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="save:" destination="b1O-9U-j0N" eventType="touchUpInside" id="Njs-6E-W9J"/>
                                        </connections>
                                    </button>
...
                                    <attributedString key="attributedTitle"/>
                                </state>
                                <connections>
                                    <action selector="backAction:" destination="c8B-iF-kYm" eventType="touchUpInside" id="hyy-dk-Xov"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Back" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8g-kA-djy">
                                <rect key="frame" x="46" y="7" width="47.5" height="24"/>
                                <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
